--- a/Productivity/Assembly-CSharp.csproj
+++ b/Productivity/Assembly-CSharp.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{B2B58FB2-4462-6B0C-A872-40DD957E5FE0}</ProjectGuid>
+	<ProjectGuid>{4448F223-7998-1CCF-FF48-557FE7E7E758}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,7 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\scripts\gui.cs" />
+     <Compile Include="Assets\scripts\DareGUI.cs" />
+     <Compile Include="Assets\scripts\EditGUI.cs" />
+     <Compile Include="Assets\scripts\FeedGUI.cs" />
+     <Compile Include="Assets\scripts\ProfileGUI.cs" />
+     <Compile Include="Assets\scripts\TabGUI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
