--- a/Productivity/Assembly-CSharp-vs.csproj
+++ b/Productivity/Assembly-CSharp-vs.csproj
@@ -46,12 +46,12 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts\CreateGUI.cs" />
      <Compile Include="Assets\scripts\DareGUI.cs" />
      <Compile Include="Assets\scripts\EditGUI.cs" />
      <Compile Include="Assets\scripts\FeedGUI.cs" />
      <Compile Include="Assets\scripts\LoginGUI.cs" />
      <Compile Include="Assets\scripts\ProfileGUI.cs" />
-     <Compile Include="Assets\scripts\gui.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
